modal alignment fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -412,6 +412,11 @@ ul {
     transform: translate(-50%,-50%) !important;
     margin: 0 auto !important;
   }
+  .login-modal {
+    .modal-dialog {
+      right: auto;
+    }
+  }
 }
 @media (max-width: 1023px) {
   .login-modal {
